tests/error/error11.sml
val prog =
  PROGRAM
    {classes=[{decls=["a","b","a"],funcs=[],name="A",super=NONE}],decls=[],
     funcs=[],stmts=[ST_EXP {exp=EXP_NEW {class="A"}}]} : program
;
